# murmurhash2-py

./: Cargo.toml  Dockerfile  README.md  murmurhash2.pyi
.github/workflows/: CI.yml  master.yml  release.yml
src/: lib.rs
tests/: test_murmurhash2.py
