[package]
name = "murmurhash2"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "murmurhash2 for Python"
repository = "https://github.com/messense/murmurhash2-py"
readme = "README.md"

[lib]
name = "murmurhash2"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.3.4"
pyo3 = { version = "0.11.1", features = ["extension-module"] }
