[package]
name = "murmurhash2"
version = "0.2.9"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "murmurhash2 for Python"
license = "MIT"
repository = "https://github.com/messense/murmurhash2-py"
readme = "README.md"

[lib]
name = "murmurhash2"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.3.4"
pyo3 = { version = "0.14.1", features = ["abi3-py36", "extension-module"] }
